# playground

./: .gitignore
fixtures/: ca.crt  server.crt  server.key
golang/: gen_passwd.go  identity.go  mock_proxy.go  sample_basicauth_httpserver.go  sample_forselect.go  sample_fsnotify_sse.go  (+11 more)
rust/: .gitignore  Cargo.toml
rust/async-await-echo/: Cargo.toml
rust/async-await-echo/src/: main.rs
rust/dbg_fibonacci/: Cargo.toml
rust/dbg_fibonacci/src/: main.rs
rust/defer/: Cargo.toml
rust/defer/src/: main.rs
rust/dohc-rs/: README.md
rust/hello_world/: Cargo.toml
rust/hyper_server/: Cargo.toml
rust/hyper_server/src/: main.rs
rust/matrix_image_converter.rs/: Cargo.toml
rust/matrix_image_converter.rs/src/: main.rs  matrix_image_converter.rs
rust/memoize/: Cargo.toml
rust/memoize/src/: main.rs
rust/my-redis/: Cargo.toml
rust/my-redis/src/: main.rs
rust/safe_root_reciprocal/: Cargo.toml
rust/safe_root_reciprocal/src/: main.rs
rust/sample_bench/: Cargo.toml  README.md
rust/sample_bench/benches/: bench.rs
rust/sample_bench/src/: lib.rs
rust/sample_g_after_f/: Cargo.toml
rust/sample_g_after_f/src/: main.rs
rust/sample_ipv6_parse_ascii/: Cargo.toml
rust/sample_ipv6_parse_ascii/src/: main.rs
rust/sample_mdbook/: book.toml
rust/sample_mdbook/src/: chapter_1.md
rust/sample_quinn/: Cargo.toml
rust/sample_quinn/src/: main.rs
rust/sample_quinn_client_server/: Cargo.toml
rust/sample_quinn_client_server/src/: main.rs
rust/sample_rustls_cert/: Cargo.toml
rust/sample_rustls_cert/src/: main.rs
rust/send_echo_request/: Cargo.toml
(+150 files in other folders)
