[workspace]
members = [
    "hello_world",
    "send_echo_request",
    "my-redis",
    "sample_bench",
    "async-await-echo",
    "hyper_server",
    "matrix_image_converter.rs",
    "sample_quinn_client_server",
    "sample_rustls_cert",
    "defer",
    "dbg_fibonacci",
    "sample_g_after_f",
    "memoize",
]
