[package]
name = "sample_quinn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.19"
rcgen = "0.8"
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
quinn = { version = "0.8", default-features = false, features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
